flux/infrastructure/webapps/tooljet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tooljet
  namespace: webapps
  labels:
    app: tooljet
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: tooljet
  template:
    metadata:
      labels:
        app: tooljet
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-192-168-100-11
      containers:
        - name: tooljet
          image: tooljet/tooljet:ee-lts-latest
          resources:
            limits:
              cpu: "2"
              memory: 3Gi
            requests:
              cpu: 500m
              memory: 1Gi
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          volumeMounts:
            - name: storage
              mountPath: /opt/tooljet/data
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 120
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: tooljet-storage
