flux/infrastructure/webapps/tooljet/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: tooljet
  namespace: webapps
spec:
  selector:
    app: tooljet
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tooljet-postgres
  namespace: webapps
spec:
  selector:
    app: tooljet-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
